01_batch_demo/k8s/mssql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql
  namespace: ad-batch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/azure-sql-edge:latest
          ports:
            - containerPort: 1433
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          volumeMounts:
            - name: mssql-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: ad-batch
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - port: 1433
      targetPort: 1433
