01_batch_demo/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: batch-ingress
  namespace: ad-batch
spec:
  ingressClassName: nginx
  rules:
    - host: ui.batch.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: batch-api-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: batch-ui-service
                port:
                  number: 80
    - host: airflow.batch.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-api-server
                port:
                  number: 8080
